2010-10-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* conf/dhcp_fingerprints.conf: Added Avaya Phone and Aruba Access 
	Point 200 DHCP fingerprints.
	
2010-10-29      Francois Gaudreault <fgaudreault@inverse.ca>
	* pf/addons/snort/oinkmaster.conf: Update url section for the new
	emerging URL

2010-10-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/web, pf/lib/pf/web/custom.pm, pf/UPGRADE, 
	pf/cgi-bin/redir.cgi, pf/cgi-bin/register.cgi, pf/cgi-bin/release.cgi,
	pf/lib/pf/web.pm, pf/packetfence.spec: New pf::web::custom file with
	a recipe to redefine subs in pf::web in a clean way. Consumers had to
	change so this is a 'breaking' update. Made the mention in UPGRADE.
	Will simplify user upgrades. Partially fixes #1045;
	http://www.packetfence.org/bugs/view.php?id=1045

2010-10-26	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/services/apache.pm, pf/t/integration.t, 
	pf/conf/documentation.conf, pf/conf/pf.conf.defaults, 
	pf/conf/templates/httpd.conf.apache22, pf/lib/pf/freeradius.pm,
	pf/lib/pf/services.pm, pf/t/all.t, pf/t/services.t, pf/t/smoke.t,
	pf/t/integration.t, pf/packetfence.spec: New feature: Passthrough using
	mod_rewrite and reverse proxying. Leveraging existing configuration in
	pf.conf (passthroughs section). Fixes #772;
	Refactored new config generation into it's own pf::services::apache
	module. Pushed along with some new tests.
	http://www.packetfence.org/bugs/view.php?id=772

2010-10-25	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Documented violation
	with external URL behavior and the redirect_url feature.

	* pf/addons/integration-testing/violations.conf, pf/lib/pf/services.pm,
	pf/conf/templates/httpd.conf.apache22, UPGRADE:
	Repaired violations with absolute URLs making PacketFence's captive 
	portal act as a reverse proxy. Fixes #1024;
	http://www.packetfence.org/bugs/view.php?id=1024
	
2010-10-25	Regis Balzard <rbalzard@inverse.ca>