@@ -1,3 +1,6 @@
+2010-11-01	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/lib/pf/web/util.pm: New web utilities file.
+
 2010-10-30	Olivier Bilodeau <obilodeau@inverse.ca>
 	* conf/dhcp_fingerprints.conf: Added Avaya Phone and Aruba Access 
 	Point 200 DHCP fingerprints.
